Dummy Launcher (Need to set the main activity back to the default of `TestStorageActivity` to unpack the runtime before the DummyLauncher works.